# flake8-override

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml  test.yml
flake8_override/: __init__.py  plugin.py  py.typed
tests/fixtures/: file.py  file.py.txt
tests/it/: test.py  test_app.py
tests/test_example/: test_some_function.py
tests/unit/: test_plugin.py
