[tool.poetry]
name = "flake8-override"
description = "This is how python package should look like!"
version = "0.0.2"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/blablatdinov/flake8-override"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = ">=5.0.0"

[tool.poetry.plugins."flake8.extension"]
OVR = "flake8_override.plugin:Plugin"

[tool.poetry.group.dev.dependencies]
mypy = "1.11.0"

wemake-python-styleguide = "0.19.2"
flake8-pytest-style = "2.0.0"
pytest = "8.3.1"
pytest-cov = "5.0.0"
pytest-randomly = "3.15.0"
astpretty = "3.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
