[tool.poetry]
name = "flake8-override"
description = "This is how python package should look like!"
version = "0.1.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/blablatdinov/flake8-override"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = ">=7.0.0"

[tool.poetry.plugins."flake8.extension"]
OVR = "flake8_override.plugin:Plugin"

[tool.poetry.group.dev.dependencies]
mypy = "2.0.0"

wemake-python-styleguide = "1.6.2"
pytest = "9.0.3"
pytest-cov = "7.1.0"
pytest-randomly = "4.1.0"
astpretty = "3.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
